[tool.poetry]
name = "server"
version = "0.1.0"
description = "REST API for Learnist"
authors = ["ax-a-dev <67195650+ax-a-dev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
fastapi-login = "^1.8.2"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
bcrypt = "^3.2.2"
odetam = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
